--- a/.dotbot.conf.yaml
+++ b/.dotbot.conf.yaml
@@ -17,4 +17,4 @@
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
     - [~/.tmux/plugins/tpm/scripts/install_plugins.sh >/dev/null 2>&1, Installing tmux plugins]
-    - ["vim +PackerSync +qa", Installing and updating plugins]
+    - ["nvim +PackerSync +qa", Installing and updating plugins]
