Mackup config for other apps.

--- a/.dotbot.conf.yaml
+++ b/.dotbot.conf.yaml
@@ -13,6 +13,7 @@
     ~/.config/alacritty: alacritty
     ~/.config/nvim: nvim
     ~/.zshrc: .zshrc
+    ~/.mackup.cfg: .mackup.cfg
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
