Kitty solves fonts problems, update and map fine.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,17 +1,21 @@
 include dracula.conf
 
-font_family JetBrains Mono
-bold_font JetBrains Mono Bold
-italic_font JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
-font_size 15
-adjust_line_height 150%
+font_family JetBrainsMono Nerd Font Mono Thin
+bold_font JetBrainsMono Nerd Font Mono SemiBold
+italic_font JetBrainsMono Nerd Font Mono Thin Italic
+bold_italic_font JetBrainsMono Nerd Font Mono SemiBold Italic
+font_size 13
+adjust_line_height 110%
 box_drawing_scale 0.1, 0.1, 0.1, 0.1
 
 cursor_blink_interval 0
-window_padding_width 10
+window_padding_width 3
 hide_window_decorations yes
 remember_window_size  no
 initial_window_width  1440
-initial_window_height 875
+initial_window_height 900
 enable_audio_bell no
+
+symbol_map U+EB58 Noto Color Emoji
+symbol_map U+EA60-U+EBBC codicon
+symbol_map U+f101-U+f208 nonicons
