Use Xingkai SC for CJK Unicode characters.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,8 +28,10 @@ set -g allow-rename on
 set -g renumber-windows on
 
 # Set a terminal that apps will know how to handle
-set -g default-terminal "alacritty"
-set -ga terminal-overrides ",alacritty:RGB"
+# set -g default-terminal "alacritty"
+# set -ga terminal-overrides ",alacritty:RGB"
+set -g default-terminal "xterm-kitty"
+# set-option -sa terminal-overrides ",xterm-kitty:RGB"
 # set -g default-terminal "tmux-256color"
 # set -g default-command "${SHELL}"
 # set -g default-terminal "screen-256color-italic"
@@ -64,8 +66,9 @@ set -g set-titles on
 set -g base-index 1
 setw -g pane-base-index 1
 
-bind -n S-Enter send-keys Escape "[13;2u"
-bind -n C-Enter send-keys Escape "[13;5u"
+# ONLY for alacritty?
+# bind -n S-Enter send-keys Escape "[13;2u"
+# bind -n C-Enter send-keys Escape "[13;5u"
 
 # How long to display the pane number on PREFIX-q
 set -g display-panes-time 3000 # 3s
