--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,9 +2,9 @@
 
 include dracula.conf
 
-font_family JetBrainsMono Nerd Font Mono Light
-bold_font JetBrainsMono Nerd Font Mono SemiBold
-italic_font JetBrainsMono Nerd Font Mono Light Italic
+font_family      JetBrainsMono Nerd Font Mono Light
+bold_font        JetBrainsMono Nerd Font Mono SemiBold
+italic_font      JetBrainsMono Nerd Font Mono Light Italic
 bold_italic_font JetBrainsMono Nerd Font Mono SemiBold Italic
 font_size 13
 adjust_line_height 110%
@@ -21,6 +21,7 @@ enable_audio_bell no
 symbol_map U+EB58 Noto Color Emoji
 symbol_map U+EA60-U+EBBC codicon
 symbol_map U+f101-U+f208 nonicons
+symbol_map U+4E00-U+9FFF Xingkai SC
 
 #: Fonts {{{
 
@@ -121,7 +122,7 @@ disable_ligatures never
 #: implemented using the calt OpenType feature. For disabling general
 #: ligatures, use the font_features setting.
 
-font_features
+# font_features
 
 #: E.g. font_features none
 
@@ -1825,7 +1826,7 @@ map cmd+0               change_font_size all 0
 #: To setup shortcuts to change only the current OS window's font
 #: size::
 
-#:     map kitty_mod+f6 change_font_size current 10.0
+map kitty_mod+f10 change_font_size current +10.0
 #: }}}
 
 #: Select and act on visible text {{{
@@ -1903,7 +1904,7 @@ map kitty_mod+f11 toggle_fullscreen
 
 #: Toggle maximized
 
-map kitty_mod+f10 toggle_maximized
+#: map kitty_mod+f10 toggle_maximized
 
 #: Unicode input
 
