Apply codicons and emmet_ls.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -18,10 +18,11 @@ initial_window_width  1440
 initial_window_height 900
 enable_audio_bell no
 
-symbol_map U+EB58 Noto Color Emoji
+# symbol_map U+EB58 Noto Color Emoji
 symbol_map U+EA60-U+EBBC codicon
 symbol_map U+f101-U+f208 nonicons
-symbol_map U+4E00-U+9FFF Xingkai SC
+# symbol_map U+4E00-U+9FFF Xingkai SC Bold
+symbol_map U+4E00-U+9FFF source Han Sans CN Light
 
 #: Fonts {{{
 
